<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home_white" />
    <item
        android:id="@+id/menu_chats"
        android:title="@string/menu_chats"
        android:icon="@drawable/ic_chat_white" />
    <item
        android:id="@+id/menu_sell"
        android:title="@string/menu_sell"
        android:enabled="false" />
    <item
        android:id="@+id/menu_my_ads"
        android:title="@string/menu_my_ads"
        android:icon="@drawable/ic_heart_white" />
    <item
        android:id="@+id/menu_account"
        android:title="@string/menu_account"
        android:icon="@drawable/ic_person_white" />


</menu>