<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginEmailActivity">


    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">

        <ImageButton
            android:id="@+id/toolbarBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_white"
            android:layout_centerVertical="true"
            android:padding="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button_desc"/>

        <TextView
            android:id="@+id/toolbarTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Login"
            style="@style/TextAppearance.MaterialComponents.Body1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorGray02"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileIv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:background="@color/colorGray01"
            android:src="@drawable/ic_person_white"
            app:shapeAppearanceOverlay="@style/ImageStyle_circle"/>

        <TextView
            android:id="@+id/loginLabelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Login To Your Account"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/profileIv"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/loginLabelTv"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:startIconDrawable="@drawable/ic_email_white"
            android:hint="Email"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:inputType="textEmailAddress"
                android:paddingStart="40dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            android:hint="Password"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_white"
            android:layout_marginTop="1dp"
            android:layout_below="@id/emailTil"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:inputType="textPassword"
                android:paddingStart="40dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/noAccountTv"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordTil"
            android:layout_alignParentStart="true"
            android:layout_marginStart="107dp"
            android:layout_marginTop="34dp"
            android:text="@string/not_have_account_register" />

        <TextView
            android:id="@+id/forgotPasswordTv"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordTil"
            android:layout_alignParentEnd="true"

            android:layout_marginTop="67dp"
            android:layout_marginEnd="111dp"
            android:text="@string/forgot_password_recover" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:text="LOGIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:cornerRadius="8dp"
            android:minHeight="@dimen/m_button_height"/>

    </RelativeLayout>



</RelativeLayout>