<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Activities.AdCreateActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">

        <ImageButton
            android:id="@+id/toolbarBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_white"
            android:layout_centerVertical="true"
            android:padding="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button_desc"/>

        <TextView
            android:id="@+id/toolbarTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Add"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_centerInParent="true"/>

        <ImageButton
            android:id="@+id/toolbarAddImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_photo_gray"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:padding="16dp"
            android:contentDescription="@string/add_image_button_desc"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorGray01"/>


    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_below="@id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_above="@id/postAdBtn"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/imagesLabelTv"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pick Up Images"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imagesRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imagesLabelTv"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:spanCount="4"
                tools:listitem="@layout/row_images_picked"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/BookNameTill"
                android:layout_width="match_parent"
                android:layout_below="@id/imagesRv"
                app:boxCornerRadiusTopStart="8dp"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="Book Name"
                app:startIconDrawable="@drawable/ic_book_gray"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/bookEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:paddingStart="40dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"/>





            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/categoryTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:layout_below="@id/BookNameTill">

                <AutoCompleteTextView
                    android:id="@+id/categoryAct"
                    android:layout_width="match_parent"
                    android:inputType="none"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_category_gray"
                    android:hint="Select a category"  /><!-- Add a hint -->


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/locationTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:layout_below="@id/categoryTil"
                android:contentDescription="@string/location_autocomplete_desc">

                <AutoCompleteTextView
                    android:id="@+id/locationAct"
                    android:layout_width="match_parent"
                    android:inputType="none"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_location_gray"
                    android:hint="Select a location" />  <!-- Add a hint -->

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/priceTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:startIconDrawable="@drawable/ic_wallet_white"
                app:boxCornerRadiusTopStart="8dp"
                android:layout_below="@id/locationTil">

                <EditText
                    android:id="@+id/priceEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:paddingStart="40dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:startIconDrawable="@drawable/ic_title_white"
                app:boxCornerRadiusTopStart="8dp"
                android:layout_below="@id/priceTil">

                <EditText
                    android:id="@+id/titleEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:paddingStart="40dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"/>

                


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:startIconDrawable="@drawable/ic_description_gray"
                app:boxCornerRadiusTopStart="8dp"
                android:layout_below="@id/titleTil">

                <EditText
                    android:id="@+id/descriptionEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minHeight="100dp"
                    android:gravity="start"
                    android:paddingStart="40dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"/>


            </com.google.android.material.textfield.TextInputLayout>


        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/postAdBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:minHeight="@dimen/m_button_height"
        android:text="POST ADD"
        app:backgroundTint="#B30FD0"
        app:cornerRadius="8dp" />


</RelativeLayout>